@@ -67,22 +67,22 @@ public class MzMLFileParserTest {
     Assert.assertNotNull(spectrum);
     Assert.assertNotNull(spectrum.getMzValues());
     Assert.assertNotNull(spectrum.getIntensityValues());
-    Assert.assertEquals(new Integer(spectrum.getMzValues().length),
+    Assert.assertEquals(Integer.valueOf(spectrum.getMzValues().length),
         spectrum.getNumberOfDataPoints());
-    Assert.assertEquals(new Integer(spectrum.getIntensityValues().length),
+    Assert.assertEquals(Integer.valueOf(spectrum.getIntensityValues().length),
         spectrum.getNumberOfDataPoints());
-    Assert.assertEquals(new Integer(2114), spectrum.getScanNumber());
+    Assert.assertEquals(Integer.valueOf(2114), spectrum.getScanNumber());
     Assert.assertEquals(MsSpectrumType.CENTROIDED, spectrum.getSpectrumType());
-    Assert.assertEquals(new Float(9.939699e06), spectrum.getTIC(), 10);
+    Assert.assertEquals(9.939699e06f, spectrum.getTIC(), 0.0001);
     Assert.assertEquals(100.175651550293, spectrum.getMzRange().lowerEndpoint(),
         0.000001);
     Assert.assertEquals(999.832214355469, spectrum.getMzRange().upperEndpoint(),
         0.000001);
     Assert.assertEquals(509.6600036621094, spectrum.getMzValues()[619], 0.0001);
     Assert.assertEquals("+ c ESI Q1MS [100.000-1000.000]", spectrum.getScanDefinition());
-    Assert.assertEquals(new Integer(1), spectrum.getMsLevel());
+    Assert.assertEquals(Integer.valueOf(1), spectrum.getMsLevel());
     Assert.assertEquals(PolarityType.POSITIVE, spectrum.getPolarity());
-    Assert.assertEquals(new Float(18.89235 * 60), spectrum.getRetentionTime());
+    Assert.assertEquals(Float.valueOf((float)(18.89235 * 60)), spectrum.getRetentionTime());
 
     rawFile.dispose();
 
@@ -101,21 +101,21 @@ public class MzMLFileParserTest {
     Assert.assertNotNull(spectrum2);
     Assert.assertNotNull(spectrum2.getMzValues());
     Assert.assertNotNull(spectrum2.getIntensityValues());
-    Assert.assertEquals(new Integer(spectrum2.getMzValues().length),
+    Assert.assertEquals(Integer.valueOf(spectrum2.getMzValues().length),
         spectrum2.getNumberOfDataPoints());
-    Assert.assertEquals(new Integer(spectrum2.getIntensityValues().length),
+    Assert.assertEquals(Integer.valueOf(spectrum2.getIntensityValues().length),
         spectrum2.getNumberOfDataPoints());
-    Assert.assertEquals(new Integer(2117), spectrum2.getScanNumber());
+    Assert.assertEquals(Integer.valueOf(2117), spectrum2.getScanNumber());
     Assert.assertEquals(MsSpectrumType.CENTROIDED, spectrum2.getSpectrumType());
-    Assert.assertEquals(new Float(43900.85546875), spectrum2.getTIC(), 10);
+    Assert.assertEquals(Float.valueOf(43900.855f), spectrum2.getTIC(), 10);
     Assert.assertEquals(100.300285339355, spectrum2.getMzRange().lowerEndpoint(),
         0.000001);
     Assert.assertEquals(999.323547363281, spectrum2.getMzRange().upperEndpoint(),
         0.000001);
     Assert.assertEquals("- c ESI Q1MS [100.000-1000.000]", spectrum2.getScanDefinition());
-    Assert.assertEquals(new Integer(1), spectrum2.getMsLevel());
+    Assert.assertEquals(Integer.valueOf(1), spectrum2.getMsLevel());
     Assert.assertEquals(PolarityType.NEGATIVE, spectrum2.getPolarity());
-    Assert.assertEquals(new Float(18.919083333333 * 60), spectrum2.getRetentionTime());
+    Assert.assertEquals(Float.valueOf((float)(18.919083333333 * 60)), spectrum2.getRetentionTime());
 
     rawFile2.dispose();
   }
@@ -123,7 +123,7 @@ public class MzMLFileParserTest {
   @Test
   public void test5peptideFT() throws MSDKException {
 
-    float intensityBuffer[] = new float[10000];
+    float intensityBuffer[];
 
     // Import the file
     String file = "5peptideFT.mzML";
@@ -141,9 +141,9 @@ public class MzMLFileParserTest {
 
     // 2nd scan, #2
     MsScan scan2 = scans.get(1);
-    Assert.assertEquals(new Integer(2), scan2.getScanNumber());
+    Assert.assertEquals(Integer.valueOf(2), scan2.getScanNumber());
     Assert.assertEquals(MsSpectrumType.PROFILE, scan2.getSpectrumType());
-    Assert.assertEquals(new Integer(1), scan2.getMsLevel());
+    Assert.assertEquals(Integer.valueOf(1), scan2.getMsLevel());
     Assert.assertEquals(0.474f, scan2.getRetentionTime(), 0.01f);
     Assert.assertEquals(PolarityType.POSITIVE, scan2.getPolarity());
     Assert.assertEquals(209.1818184554577, scan2.getMzValues()[100], 0.00001);
@@ -156,9 +156,9 @@ public class MzMLFileParserTest {
 
     // 5th scan, #5
     MsScan scan5 = scans.get(4);
-    Assert.assertEquals(new Integer(5), scan5.getScanNumber());
+    Assert.assertEquals(Integer.valueOf(5), scan5.getScanNumber());
     Assert.assertEquals(MsSpectrumType.CENTROIDED, scan5.getSpectrumType());
-    Assert.assertEquals(new Integer(2), scan5.getMsLevel());
+    Assert.assertEquals(Integer.valueOf(2), scan5.getMsLevel());
     Assert.assertEquals(2.094f, scan5.getRetentionTime(), 0.01f);
     Assert.assertEquals(PolarityType.POSITIVE, scan5.getPolarity());
     Assert.assertEquals(483.4679870605469, scan5.getMzValues()[200], 0.00001);
@@ -194,9 +194,9 @@ public class MzMLFileParserTest {
 
     // 2nd scan, #20
     MsScan scan2 = scans.get(1);
-    Assert.assertEquals(new Integer(20), scan2.getScanNumber());
+    Assert.assertEquals(Integer.valueOf(20), scan2.getScanNumber());
     Assert.assertEquals(MsSpectrumType.CENTROIDED, scan2.getSpectrumType());
-    Assert.assertEquals(new Integer(2), scan2.getMsLevel());
+    Assert.assertEquals(Integer.valueOf(2), scan2.getMsLevel());
     Assert.assertEquals(359.43f, scan2.getRetentionTime(), 0.01f);
     Assert.assertEquals(PolarityType.POSITIVE, scan2.getPolarity());
     Assert.assertEquals(16.0, scan2.getMzValues()[8], 0.00001);
@@ -212,7 +212,7 @@ public class MzMLFileParserTest {
 
     IsolationInfo scan2Isolation = scan2Isolations.get(0);
     Assert.assertEquals(445.34, scan2Isolation.getPrecursorMz(), 0.001);
-    Assert.assertEquals(new Integer(2), scan2Isolation.getPrecursorCharge());
+    Assert.assertEquals(Integer.valueOf(2), scan2Isolation.getPrecursorCharge());
 
     rawFile.dispose();
 
@@ -222,7 +222,7 @@ public class MzMLFileParserTest {
   @Test
   public void testParamGroup() throws MSDKException {
 
-    float intensityBuffer[] = new float[10000];
+    float intensityBuffer[];
 
     // Import the file
     String file = "RawCentriodCidWithMsLevelInRefParamGroup.mzML";
@@ -240,9 +240,9 @@ public class MzMLFileParserTest {
 
     // 2nd scan, #1001
     MsScan scan2 = scans.get(1);
-    Assert.assertEquals(new Integer(1001), scan2.getScanNumber());
+    Assert.assertEquals(Integer.valueOf(1001), scan2.getScanNumber());
     Assert.assertEquals(MsSpectrumType.CENTROIDED, scan2.getSpectrumType());
-    Assert.assertEquals(new Integer(2), scan2.getMsLevel());
+    Assert.assertEquals(Integer.valueOf(2), scan2.getMsLevel());
     Assert.assertEquals(100.002f, scan2.getRetentionTime(), 0.01f);
     Assert.assertEquals(PolarityType.POSITIVE, scan2.getPolarity());
     Assert.assertEquals(111.03714243896029, scan2.getMzValues()[10], 0.00001);
@@ -254,9 +254,9 @@ public class MzMLFileParserTest {
 
     // 101th scan, #1100
     MsScan scan101 = scans.get(100);
-    Assert.assertEquals(new Integer(1100), scan101.getScanNumber());
+    Assert.assertEquals(Integer.valueOf(1100), scan101.getScanNumber());
     Assert.assertEquals(MsSpectrumType.CENTROIDED, scan101.getSpectrumType());
-    Assert.assertEquals(new Integer(1), scan101.getMsLevel());
+    Assert.assertEquals(Integer.valueOf(1), scan101.getMsLevel());
     Assert.assertEquals(109.998f, scan101.getRetentionTime(), 0.01f);
     Assert.assertEquals(174.10665617189798, scan101.getMzValues()[10], 0.00001);
     intensityBuffer = scan101.getIntensityValues();
@@ -336,11 +336,11 @@ public class MzMLFileParserTest {
 
     // 4th chromatogram
     Chromatogram chromatogram = chromatograms.get(3);
-    Assert.assertEquals(new Integer(4), chromatogram.getChromatogramNumber());
+    Assert.assertEquals(Integer.valueOf(4), chromatogram.getChromatogramNumber());
     Assert.assertEquals(ChromatogramType.MRM_SRM, chromatogram.getChromatogramType());
-    Assert.assertEquals(new Integer(1608), chromatogram.getNumberOfDataPoints());
-    Assert.assertEquals(new Integer(2), (Integer) chromatogram.getIsolations().size());
-    Assert.assertEquals(new Double(440.706), chromatogram.getIsolations().get(1).getPrecursorMz());
+    Assert.assertEquals(Integer.valueOf(1608), chromatogram.getNumberOfDataPoints());
+    Assert.assertEquals(Integer.valueOf(2), (Integer) chromatogram.getIsolations().size());
+    Assert.assertEquals(Double.valueOf(440.706), chromatogram.getIsolations().get(1).getPrecursorMz());
     Assert.assertEquals(ActivationType.CID,
         chromatogram.getIsolations().get(0).getActivationInfo().getActivationType());
     Assert.assertEquals(0.01095, chromatogram.getRetentionTimes()[0], 0.0001);
@@ -364,7 +364,7 @@ public class MzMLFileParserTest {
   @Test
   public void testEmptyScan() throws MSDKException {
 
-    float intensityBuffer[] = new float[10000];
+    float intensityBuffer[];
 
     // Import the file
     String file = "emptyScan.mzML";
@@ -382,9 +382,9 @@ public class MzMLFileParserTest {
 
     // 1st scan, #422
     MsScan scan2 = scans.get(0);
-    Assert.assertEquals(new Integer(422), scan2.getScanNumber());
+    Assert.assertEquals(Integer.valueOf(422), scan2.getScanNumber());
     Assert.assertEquals(MsSpectrumType.CENTROIDED, scan2.getSpectrumType());
-    Assert.assertEquals(new Integer(2), scan2.getMsLevel());
+    Assert.assertEquals(Integer.valueOf(2), scan2.getMsLevel());
     Assert.assertEquals(309.1878f, scan2.getRetentionTime(), 0.01f);
     Assert.assertEquals(PolarityType.POSITIVE, scan2.getPolarity());
     scan2.getMzValues();
@@ -438,17 +438,19 @@ public class MzMLFileParserTest {
 
     // 4th scan, #2103
     MsScan scan4 = scans.get(3);
-    Assert.assertEquals(new Integer(2103), scan4.getScanNumber());
+    Assert.assertEquals(Integer.valueOf(2103), scan4.getScanNumber());
     Assert.assertEquals(MsSpectrumType.CENTROIDED, scan4.getSpectrumType());
-    Assert.assertEquals(new Integer(1), scan4.getMsLevel());
+    Assert.assertEquals(Integer.valueOf(1), scan4.getMsLevel());
     Assert.assertEquals(1127.6449f, scan4.getRetentionTime(), 0.01f);
     Assert.assertEquals(PolarityType.NEGATIVE, scan4.getPolarity());
     Assert.assertEquals(425.50030515961424, scan4.getMzValues()[510], 0.0001);
     Assert.assertEquals(1306, (int) scan4.getNumberOfDataPoints());
     Float scan2maxInt =
         MsSpectrumUtil.getMaxIntensity(scan4.getIntensityValues(), scan4.getNumberOfDataPoints());
-    Assert.assertEquals(8746.9599f, scan2maxInt, 0.1f);
-    Assert.assertEquals(new Float(58989.76953125), scan4.getTIC(), 10);
+    //Assert.assertEquals(8746.9599f, scan2maxInt, 0.1f);
+    Assert.assertEquals(8746.96f, scan2maxInt, 0.1f);
+    //Assert.assertEquals(58989.76953125f, scan4.getTIC(), 0.1);
+    Assert.assertEquals(58989.77f, scan4.getTIC(), 0.1);
     Assert.assertEquals(100.317253112793, scan4.getMzRange().lowerEndpoint(), 0.000001);
     Assert.assertEquals(999.715515136719, scan4.getMzRange().upperEndpoint(), 0.000001);
     Assert.assertEquals("- c ESI Q1MS [100.000-1000.000]", scan4.getScanDefinition());
@@ -464,10 +466,10 @@ public class MzMLFileParserTest {
 
     // 1st chromatogram
     Chromatogram chromatogram = chromatograms.get(0);
-    Assert.assertEquals(new Integer(1), chromatogram.getChromatogramNumber());
+    Assert.assertEquals(1, (int)chromatogram.getChromatogramNumber());
     Assert.assertEquals(ChromatogramType.TIC, chromatogram.getChromatogramType());
-    Assert.assertEquals(new Integer(2126), chromatogram.getNumberOfDataPoints());
-    Assert.assertEquals(new Integer(0), (Integer) chromatogram.getIsolations().size());
+    Assert.assertEquals(2126, (int)chromatogram.getNumberOfDataPoints());
+    Assert.assertEquals(0, chromatogram.getIsolations().size());
     float[] rtValues = chromatogram.getRetentionTimes();
     Assert.assertEquals(2126, rtValues.length);
     Assert.assertEquals(12.60748291015625, rtValues[1410], 0.0001);
